# sqlc-gen-python

./: .gitignore  .prototools  Cargo.toml  LICENSE.LicenseRef-KevinValk-Commercial  README.md  build.rs  sqlc.yaml
.cargo/: config.toml
src/: main.rs  sqlc.rs
src/codegen/: macros.rs  mod.rs
