[package]
name = "rust-sqlc-gen-python"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", rev = "0.12.3" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff.git", rev = "0.12.3" }
ruff_python_codegen = { git = "https://github.com/astral-sh/ruff.git", rev = "0.12.3" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", rev = "0.12.3" }
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"
prost = "0.12"
prost-types = "0.12"
sqlparser = { version = "0.9.0", features = ["serde"] }
bytes = "1.1.0"

[build-dependencies]
prost-build = "0.12"

[profile.release]
opt-level = "z"
lto = true
